# endoscope-camera

./: README.md
endo_ws/install/: local_setup.sh  setup.sh
endo_ws/install/endofeed/lib/endofeed/: publisher_endo_cam
endo_ws/install/endofeed/share/endofeed/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
endo_ws/install/endofeed/share/endofeed/cmake/: endofeedConfig.cmake
endo_ws/install/infer/lib/infer/: detector
endo_ws/install/infer/share/infer/: package.bash  package.dsv  package.sh  package.xml  package.zsh
endo_ws/log/: latest_build
endo_ws/src/endofeed/: CMakeLists.txt
endo_ws/src/endofeed/src/: publisher_endo_cam.cpp
endo_ws/src/infer/: setup.cfg  setup.py
endo_ws/src/infer/infer/: polyp_inference.py
models/src/: .test.py.swp  nbi.py  polyp_detect.py  test.py
models/src/preprocessing/: annotate.py  kvasir.json
